Kubernetes/Services/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: ntfy.kbushby.com
    external-dns.alpha.kubernetes.io/hostname: ntfy.kbushby.com
spec:
  ingressClassName: nginx
  rules:
  - host: ntfy.kbushby.com
    http:
      paths:
      - backend:
          service:
            name: ntfy-service
            port:
              name: ntfy-http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ntfy.kbushby.com
    secretName: ntfy-tls
